# trms2

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
api/: app.py  routers.py
api/room_api/: dependencies.py
api/room_api/rooms/: dependencies.py  handlers.py  schemas.py
api/room_api/tasks/: handlers.py  schemas.py
api/room_api/users/: handlers.py  schemas.py
api/user_api/: dependencies.py  handlers.py  schemas.py
api/user_api/auth/: login.py
common/auth/: jwt.py  rest.py  settings.py
common/database/: base_service.py
common/tasks/: system_messages.py
migrations/versions/: 379cf7d0e225_database_creation.py
models/: models.py
services/rooms/: access.py  room_service.py  settings.py
services/tasks/: settings.py  task_service.py
services/users/: auth_service.py  settings.py  user_service.py
