[tool.poetry]
name = "trms2"
version = "0.1.0"
description = ""
authors = ["Alex Ershov <galak654@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
